estilizacao da section 2 e adicionar o font awesome

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <title>Demoday</title>
 </head>
 <body>
     <header>
-        <div class="bg-header">
-            
-            <img src="img/bg-header.png" alt="Imagem de um jovem estudante segurando a mochila">
+        <div class="bg-header">            
+            <img src="img/bg-header-small.png" alt="Imagem de um jovem estudante segurando a mochila">
         </div>
 
     <nav>
@@ -67,8 +67,30 @@
             </div>
         </div>
    
-</section>
 
+<div class="section-two"> 
+    <div class="box-text-2">
+
+        <h2>Como funciona?</h2>
+        
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, saepe atque. Assumenda dolor alias aliquam sequi labore nihil? Voluptas ullam quod quam exercitationem quae, consectetur libero cumque hic quisquam sapiente.
+        </p>
+    </div>
+    <div class="card-info">
+
+        <div class="cards-style">
+
+            <h3>FORMAÇÃO DE QUALIDADE </h3>
+
+            <p>Cursos de educação profissional para jovens de baixa renda com auxílio transporte.</p>
+        </div>
+        <div class="cards-style"></div>
+        <div class="cards-style"></div>
+
+            </div>
+</div>
+</section>
 
 </body>
 </html>
