--- a/index.html
+++ b/index.html
@@ -44,31 +44,33 @@
 </header>
 
 <section class="main-container">
+    <div class="svg">
+       
+    </div>
+  
+    <div class="main-info">
+
+        <div class="box-text"> 
+
+            <h2> Porque temos <br/> o nome Demoday </h2>
+
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa, culpa. Explicabo, et necessitatibus pariatur tempore ut, exercitationem autem nam itaque unde aliquam cupiditate alias velit quia minima ducimus molestiae quam.</p>
+
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa, culpa. Explicabo, et necessitatibus pariatur tempore ut, exercitationem autem nam itaque unde aliquam cupiditate alias velit quia minima ducimus molestiae quam.</p>
+
+            <button>COMO PARTICIPO?</button>
+        </div>
+
+        <div class="box-img">
+            <img src="img/img-container.png" alt="">
+        </div>
+       
+    </div>
 
     <!-- este svg é o background que o illustrator gerou, para deixar o site mais -->
-
-         <svg id="svg-bg"xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1923.39 1390.04"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:url(#Gradiente_sem_nome_10);}.cls-3,.cls-4{opacity:0.2;}.cls-3,.cls-4,.cls-5{mix-blend-mode:soft-light;}.cls-3{fill:url(#Gradiente_sem_nome_16);}.cls-4{fill:url(#Gradiente_sem_nome_16-2);}.cls-5{opacity:0.1;}.cls-6{opacity:0.15;fill:url(#Gradiente_sem_nome_20);}</style><linearGradient id="Gradiente_sem_nome_10" x1="-71.38" y1="-534.38" x2="2026.57" y2="1563.57" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#009eff"/><stop offset="1" stop-color="#00e7ff"/></linearGradient><linearGradient id="Gradiente_sem_nome_16" x1="759.06" y1="143.67" x2="1032.71" y2="417.33" gradientUnits="userSpaceOnUse"><stop offset="0"/><stop offset="1" stop-color="#00e7ff"/></linearGradient><linearGradient id="Gradiente_sem_nome_16-2" x1="258.56" y1="942.17" x2="532.21" y2="1215.83" xlink:href="#Gradiente_sem_nome_16"/><linearGradient id="Gradiente_sem_nome_20" x1="1276.14" y1="661.75" x2="1704.64" y2="1090.25" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#009eff"/><stop offset="1" stop-opacity="0"/></linearGradient></defs><title>Sem título-2</title><g class="cls-1"><g id="Camada_1" data-name="Camada 1"><path class="cls-2" d="M1922.5-137.5q-.26,646.76-.5,1293.5c-261.69,56.68-565.12,98-956.5,96.5C564.51,1251,266.15,1195.82,1,1135,5.33,710.39-3.33,290.61,1-134" transform="translate(0.89 137.5)"/><circle class="cls-3" cx="895.89" cy="280.5" r="193.5"/><circle class="cls-4" cx="395.39" cy="1079" r="193.5"/><path class="cls-5" d="M0-39S266.5,5.5,356.5,277.5s234,281,69,530S2,1057,0,1053,0-39,0-39Z" transform="translate(0.89 137.5)"/><circle class="cls-6" cx="1490.39" cy="876" r="303"/></g></g></svg>
-
-
-        <div class="main-info">
-
-            <div class="box-text"> 
-
-                <h2> Porque temos <br/> o nome Demoday </h2>
-
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa, culpa. Explicabo, et necessitatibus pariatur tempore ut, exercitationem autem nam itaque unde aliquam cupiditate alias velit quia minima ducimus molestiae quam.</p>
-
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa, culpa. Explicabo, et necessitatibus pariatur tempore ut, exercitationem autem nam itaque unde aliquam cupiditate alias velit quia minima ducimus molestiae quam.</p>
-
-                <button>COMO PARTICIPO?</button>
-            </div>
-
-            <div class="box-img">
-                <img src="img/img-container.png" alt="">
-            </div>
-        </div>
    
-
+   
+   
 <div class="section-two"> 
     <div class="box-text-2">
 
