pagina inicial estilizada - comecar a responsividade

--- a/index.html
+++ b/index.html
@@ -230,6 +230,22 @@
         </div>
     </section>
     
-
-</body>
-</html>
+    <footer>
+        <div class="nav-footer">
+            <h1>Logo</h1>
+            <div class="icones">
+                <i class="fab fa-facebook-f" ></i>
+                <i class="fab fa-instagram"></i>
+            </div>  
+            <div class="links-footer"> 
+                <a href="">INÍCIO</a>
+                <a href="">QUEM SOMOS</a>
+                <a href="">PERGUNTAS FREQUENTES</a>
+                <a href="">CONTATO</a>
+      
+                    <i class="fas fa-chevron-up"></i>  
+            </div>
+            </div>
+        </footer>
+    </body>
+    </html>
