estilizacao do header okay

--- a/index.html
+++ b/index.html
@@ -27,6 +27,29 @@
                        </div>
                    </nav>
 
+                   <!-- DIV PAI COM DISPLAY FLEX PARA ALINHAR OS ITENS DO HEADER -->
+                   <div class="header-container"> 
+<!-- CHAMADA DE TEXTO DO HEADER  -->
+                   <aside class="chamadaTexto">
+
+                    <h1>Empresas protagonistas</h1>
+                    <p>Na formação profissional de jovens carentes,
+                    proporcionando mais oportunidades no mercado de trabalho.
+                    </p>
+<button>Como funciona</button>
+
+<!-- OS ICONES DO HEADER ESTAO AQUI AMIGOS -->
+<div class="icones-header">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-instagram"></i>
+</div>
+
+                   </aside>
+<!-- ILUSTRAÇÃO/IMAGEM DO HEADER AQUI FRIENDS -->
+                   <div class="imgHeader">
+                       <img src="img/img-container.png" alt=""> </div>
+                    </div>
           </header>
           <article class="article">Article</article>
           <aside class="main-aside">  aisde</aside>
