codigo comentado e exemplo de responsividade adicionado

--- a/index.html
+++ b/index.html
@@ -51,11 +51,19 @@
                        <img src="img/img-container.png" alt=""> </div>
                     </div>
           </header>
-          <article class="article">Article</article>
-          <aside class="main-aside">  aisde</aside>
+          <main class="main-content"> main
+                <div> </div>
+
+                <div> </div>
+
+
+          </main>
+
+          <section class="main-section">  seçao</section>
+
         <!-- <-----A TAG MAIN SERVE PARA DIZER O CONTEÚDO PRINCIPAL DO NOSSO SITE!        
         PARA MANTER A SEMÂNTICA UTILIZAREI ELA AO INVÉS DE FICAR SÓ USANDO SECTIONS E DIV! -->
-    <main class="main-content"> main</main>
+
     
             <footer class="main-footer">
              footer
