codigo comentado e exemplo de responsividade adicionado

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                        <img src="img/img-container.png" alt=""> </div>
                     </div>
           </header>
-          <main class="main-content"> main
+
+          <!-- AS DIVS FORAM APENAS PARA TESTAR A RESPONSIVIDADE DA GRID -->
+          <main class="main-content"> 
                 <div> </div>
 
                 <div> </div>
