media no header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/header768.css">
     <link rel="stylesheet" href="style/aside.css">
     <link rel="stylesheet" href="style/como-func.css">
     <link rel="stylesheet" href="style/depoimento.css">
@@ -73,7 +74,7 @@
             
             <div class="box-incentivo box2"> 
                 <p>Seja um <span>Jovem+</span> !</p>
-                <button class="buttom-incentivo">Benefícios</button>
+                <button class="buttom-incentivo">Participe!</button>
             </div>
         </div>
         <div class="box-pq-jovem">
