--- a/participe.html
+++ b/participe.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/header768.css">
     <link rel="stylesheet" href="style/aside.css">
     <link rel="stylesheet" href="style/como-func.css">
     <link rel="stylesheet" href="style/depoimento.css">
