--- a/contato.html
+++ b/contato.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style/headerp.css">
+    <!-- <link rel="stylesheet" href="style/headerp.css"> -->
     <link rel="stylesheet" href="style/reset.css">
-    <link rel="stylesheet" href="style/contato.css">
-    <link rel="stylesheet" href="style/footer.css">
-    <script defer src="script/header.js"></script>
+    <!-- <link rel="stylesheet" href="style/contato.css"> -->
+    <link rel="stylesheet" href="style/footerp.css">
+    <!-- <script defer src="script/header.js"></script> -->
+    <script defer src="script/footer.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet">
     <link rel="shortcut icon" href="./img/logoJovem1.png">
     <title>Jovem+ | Contato</title>
 </head>
+
 <body>
-    <header>
+    <!-- <header>
         <a href="index.html"><img src="img/jovem-mais-colorido.png" alt="Jovem Mais"></a>
         <div class="hamburguer">
                 <span class="barrinha barra1"></span>
@@ -27,7 +32,21 @@
             <a href="participe.html"> Inscreva-se</a>
             <a href="login.html"><button> Entrar </button></a>
         </nav>
-    </header>
+    </header> -->
+    <footer>
+            <img src="img/footer/jovem-mais-branco.png" alt="Logo Jovem Mais">
+        <div class="icones-footer">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+        </div>
+        <nav class="footer-links">
+                <a href="beneficios.html"> Benefícios</a>
+                <a href="contato.html"> Contato</a>
+                <a href="participe.html"> Inscreva-se</a>
+        </nav>
+            <div id="botao-footer"></div>
+        </footer>
 
 </body>
 
