Alterações do Footer e Pagina Beneficios

--- a/contato.html
+++ b/contato.html
@@ -34,18 +34,18 @@
         </nav>
     </header> -->
     <footer>
-            <img src="img/footer/jovem-mais-branco.png" alt="Logo Jovem Mais">
-        <div class="icones-footer">
+            <a href="index.html"><img src="img/footer/jovem-mais-branco.png" alt="Logo Jovem Mais"></a>
+    <div class="icones-footer">
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-twitter"></i>
             <i class="fab fa-instagram"></i>
-        </div>
-        <nav class="footer-links">
-                <a href="beneficios.html"> Benefícios</a>
-                <a href="contato.html"> Contato</a>
-                <a href="participe.html"> Inscreva-se</a>
-        </nav>
-            <div id="botao-footer"></div>
+    </div>
+    <nav class="footer-links">
+            <a href="beneficios.html"> Benefícios</a>
+            <a href="contato.html"> Contato</a>
+            <a href="participe.html"> Inscreva-se</a>
+    </nav>
+        <div id="botao-footer"></div>
         </footer>
 
 </body>
