Criação da pagina de Login, alterações no header e footer

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <span class="barrinha barra3"></span>
         </div>
         <nav class="invisivel">
-            <a href="beneficios.html"> Benefícios</a>
+            <a href="index.html"> Home</a>
             <a href="contato.html"> Contato</a>
             <a href="participe.html"> Inscreva-se</a>
-            <a href="login.html"><button> Entrar </button></a>
+            <a href="entrar.html"><button> Entrar </button></a>
         </nav>
     </header>
     <!-- <div class="over"></div> -->
