--- a/participe.html
+++ b/participe.html
@@ -25,7 +25,7 @@
             <span class="barrinha barra3"></span>
         </div>
         <nav class="invisivel">
-            <a href="beneficios.html"> Benefícios</a>
+            <a href="index.html"> Home</a>
             <a href="contato.html"> Contato</a>
             <a href="participe.html"> Inscreva-se</a>
             <a href="login.html"><button> Entrar </button></a>
@@ -143,7 +143,7 @@
                 <i class="fab fa-instagram"></i>
             </div>
             <nav class="footer-links">
-                <a href="beneficios.html"> Benefícios</a>
+                <a href="index.html"> Home</a>
                 <a href="contato.html"> Contato</a>
                 <a href="participe.html"> Inscreva-se</a>
             </nav>
