ãlterações na responsividade

--- a/participe.html
+++ b/participe.html
@@ -25,7 +25,7 @@
             <span class="barrinha barra3"></span>
         </div>
         <nav class="invisivel">
-            <a href="beneficios.html"> Benefícios</a>
+            <a href="index.html"> Home</a>
             <a href="contato.html"> Contato</a>
             <a href="participe.html"> Inscreva-se</a>
             <a href="login.html"><button> Entrar </button></a>
@@ -136,18 +136,18 @@
             </div>
         </section>
         <footer>
-            <img src="img/footer/jovem-mais-branco.png" alt="Logo Jovem Mais">
-            <div class="icones-footer">
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-instagram"></i>
-            </div>
-            <nav class="footer-links">
-                <a href="beneficios.html"> Benefícios</a>
-                <a href="contato.html"> Contato</a>
-                <a href="participe.html"> Inscreva-se</a>
-            </nav>
-            <div id="botao-footer"></div>
-        </footer>
+                <img src="img/footer/jovem-mais-branco.png" alt="Logo Jovem Mais">
+                <div class="icones-footer">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                </div>
+                <nav class="footer-links">
+                    <a href="index.html"> Home</a>
+                    <a href="contato.html"> Contato</a>
+                    <a href="participe.html"> Inscreva-se</a>
+                </nav>
+                <div id="botao-footer"></div>
+            </footer>
     </body>
     </html>
