criação da page contato com responsividade

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
         <footer>
             <img src="img/footer/jovem-mais-branco.png" alt="Logo Jovem Mais">
             <div class="icones-footer">
+                <h4>Siga-nos:</h4>
                 <i class="fab fa-facebook-f"></i>
                 <i class="fab fa-twitter"></i>
                 <i class="fab fa-instagram"></i>
