--- a/participe.html
+++ b/participe.html
@@ -64,12 +64,12 @@
                 <p>Jovens de baixa renda, entre 16 a 22 anos, com renda per capita de até um salário mínimo.</p>
             </div>
             <div class="func-div">
-                <img src="img/participe/processo-seletivo.png" alt="processo seletivo">
+                <img id= "process"src="img/participe/processo-seletivo.png" alt="processo seletivo">
                 <h3>Processo Seletivo</h3>
                 <p>O jovem é encaminhado para um uma entrevista dentro da empresa que disponibiliza o curso desejado.</p>
             </div>
             <div class="func-div">
-                <img src="img/participe/beneficio.png" alt="beneficios">
+                <img id="benef" src="img/participe/beneficio.png" alt="beneficios">
                 <h3>Benefícios</h3>
                 <p>Os cursos duram até de um ano e acompanham benefícios como alimentação, transporte e material escolar.</p> 
             </div>
@@ -136,18 +136,19 @@
             </div>
         </section>
         <footer>
-                <img src="img/footer/jovem-mais-branco.png" alt="Logo Jovem Mais">
-                <div class="icones-footer">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-instagram"></i>
-                </div>
-                <nav class="footer-links">
-                    <a href="index.html"> Home</a>
-                    <a href="contato.html"> Contato</a>
-                    <a href="participe.html"> Inscreva-se</a>
-                </nav>
-                <div id="botao-footer"></div>
-            </footer>
+            <img src="img/footer/jovem-mais-branco.png" alt="Logo Jovem Mais">
+            <div class="icones-footer">
+                <h4>Siga-nos:</h4>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+            </div>
+            <nav class="footer-links">
+                <a href="index.html"> Home</a>
+                <a href="contato.html"> Contato</a>
+                <a href="participe.html"> Inscreva-se</a>
+            </nav>
+            <div id="botao-footer"></div>
+        </footer>
     </body>
     </html>
