mudança nas imagens- empresas e correcao do menu

--- a/participe.html
+++ b/participe.html
@@ -28,7 +28,7 @@
             <a href="index.html"> Home</a>
             <a href="contato.html"> Contato</a>
             <a href="participe.html"> Inscreva-se</a>
-            <a href="login.html"><button> Entrar </button></a>
+            <a href="entrar.html"><button> Entrar </button></a>
         </nav>
     </header>
     <!-- DIV PAI COM DISPLAY FLEX PARA ALINHAR OS ITENS DO HEADER -->
