--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,7 @@
             <a href="index.html"> Home</a>
             <a href="contato.html"> Contato</a>
             <a href="participe.html"> Inscreva-se</a>
-            <a href="login.html"><button> Entrar </button></a>
+            <a href="entrar.html"><button> Entrar </button></a>
         </nav>
     </header>
     <section class="main-contato">
