layout page login

--- a/entrar.html
+++ b/entrar.html
@@ -9,18 +9,19 @@
     <link rel="stylesheet" href="style/entrar.css">
     <link rel="stylesheet" href="style/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./img/logoJovem1.png">
+    <title>Login</title>
 </head>
 <body>
     <a href="index.html"><i class="fas fa-arrow-alt-circle-left"></i></a>
     <div class="contain">
         <div class="cText">
-            <h3>Log in</h3>
+            <img src="img/footer/jovem-mais-branco.png" alt="Jovem Mais">
         </div>
         <div class="cInputs">
-        <input type="text" name="username" autocomplete="off" placeholder="Username">
-        <input type="password" name="password" autocomplete="off" placeholder="Password">
-        <button>Login</button>
+        <input type="text" name="username" autocomplete="off" placeholder="Nome do usuário">
+        <input type="password" name="password" autocomplete="off" placeholder="Senha">
+        <button>Entrar</button>
     </div>
     </div>
 </body>
